<resources>
    <string name="app_name">SimpleTV</string>
    <string name="setting">设置</string>
    <string name="boot_startup">开机自启</string>
    <string name="auto_update">自动更新频道源</string>
    <string name="manual_update">更新频道源</string>
    <string name="update_version">更新版本</string>
    <string name="version_info">当前版本：%1$S</string>
    <string name="latest_version">当前已是最新版本</string>
    <string name="get_version_error_hint">获取服务器版本信息失败，请稍后重试</string>
    <string name="update_version_hint">检测到新版本，确认安装？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="update_fail_hint">更新失败，请重试，%1$s</string>
    <string name="exit_hint">再按一次退出</string>
    <string name="update_success">更新成功</string>
    <string name="update_file">更新失败</string>
    <string name="updating">检测更新…</string>
    <string name="play_decode_error_hint">解码失败，该频道不支持，请切换频道</string>
    <string name="play_network_error_hint">播放失败，网络连接超时，请稍后重试</string>
    <string name="play_other_error_hint">播放失败，请切换频道或退出重试</string>
    <string name="about">操作说明:\n 1）上下键快速切换频道，确认键弹出频道列表手动切换频道，菜单键弹出设置页面，连按两次返回退出播放。\n 2）打开开机自启开关后，电视开机会默认播放上次退出直播频道（部分设备由于系统限制，无法开机启动，请手动进入）。 \n 3）打开自动更新频道源后每24小时会自动更新，也可手动更新，黑屏无法播放时请尝试手动更新，更新完成后重新选择频道。</string>
    <string name="load_channel_list_fail">加载频道列表失败，请退出或更新频道源之后重试</string>
    <string name="init_channel_list">初始化频道列表</string>
    <string name="init_channel_list_fail_network_error">初始化频道列表失败，请尝试手动更新或退出重试</string>
    <string name="update_channel_list_fail_network_error">更新频道列表失败，请尝试手动更新</string>
    <string name="font_size">字体大小</string>
    <string name="font_size_normal">标准</string>
    <string name="font_size_large">大</string>
    <string name="font_size_huge">超大</string>
</resources>