<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="autoBoot"
            type="java.lang.Boolean" />

        <variable
            name="autoUpdate"
            type="java.lang.Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/text_color"
                android:textSize="@dimen/lb_action_text_size" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_auto_boot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_selector"
                android:checked="@{autoBoot}"
                android:nextFocusUp="@id/btn_update_version"
                android:nextFocusDown="@id/sw_auto_update"
                android:padding="10dp"
                android:text="@string/boot_startup"
                android:textColor="@color/text_color"
                android:thumb="@drawable/switch_thumb_selector"
                app:track="@drawable/switch_track_selector" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_auto_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_selector"
                android:checked="@{autoUpdate}"
                android:nextFocusUp="@id/sw_auto_boot"
                android:nextFocusDown="@id/rl_font_size"
                android:padding="10dp"
                android:text="@string/auto_update"
                android:textColor="@color/text_color"
                android:thumb="@drawable/switch_thumb_selector"
                app:track="@drawable/switch_track_selector" />

            <RelativeLayout
                android:id="@+id/rl_font_size"
                android:nextFocusUp="@id/sw_auto_update"
                android:nextFocusDown="@id/btn_manual_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_selector"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/font_size"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/tv_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/iv_arrow"
                    android:textColor="@color/text_color"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/arrow"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_manual_update"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:nextFocusUp="@id/rl_font_size"
                android:nextFocusDown="@id/btn_update_version"
                android:text="@string/manual_update" />

            <Button
                android:id="@+id/btn_update_version"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:nextFocusUp="@id/btn_manual_update"
                android:nextFocusDown="@id/sw_auto_boot"
                android:text="@string/update_version" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_info"
                android:textColor="@color/text_color"
                android:textSize="@dimen/lb_basic_card_content_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/text_color"
                android:textSize="@dimen/lb_basic_card_content_text_size" />
        </LinearLayout>
    </ScrollView>
</layout>